<!--
  ~ Copyright (C) 2017 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~            http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Ora Chat</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="empty_field">Enter all the information</string>
    <string name="save_user_id">store_user_id</string>
    <string name="save_user_name">store_user_name</string>
    <string name="save_user_email">store_user_email</string>
    <string name="save_user_authorization">store_user_authorization</string>
    <string name="authorization">Authorization</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_account">Account</string>
    <string name="content_type">Content-Type</string>
    <string name="save_user_content_type">content_type</string>
    <string name="chat_name">Chat room name</string>
    <string name="chat_first_message">First message</string>
    <string name="create_chat">Create chat</string>
    <string name="edit_chat">Edit</string>
    <string name="save">Save</string>
    <string name="user_information_updated">User information successful updated</string>
    <string name="request_error">Something went wrong, try again later</string>
    <string name="days_ago">days ago</string>
    <string name="weeks_ago">weeks ago</string>
    <string name="network_error">Network error. Verify your network connection</string>
    <string name="password_not_mathing">Password and password confirmation are not mathing</string>
</resources>
